project(libxenbe)

################################################################################
# Includes
################################################################################

################################################################################
# Sources
################################################################################

set(SOURCES
	ExampleBackend.cpp
)

################################################################################
# Targets
################################################################################

add_executable(example_be ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(example_be
	xenbe
)
